--- a/pc/static/app/tmpls/index.html
+++ b/pc/static/app/tmpls/index.html
@@ -2,8 +2,11 @@
 
 <div class="col-sm-10 col-sm-offset-1">
 	<form ng-submit="search()">
-		<span class="pull-right">
-			<input ng-model="search_query" type="text" /><button type="submit">Search</button>
+		<span class="pull-right col-sm-4 input-group">
+			<input class="form-control" ng-model="search_query" type="text" />
+			<span class="input-group-btn">
+				<button class="btn btn-default" type="submit">Search</button>
+			</span>
 		</span>
 	</form>
 	<br />
@@ -31,4 +34,6 @@
 			<td><span class="glyphicon glyphicon-trash"></span></td>
 		</tr>
 	</table>
+
+	<pagination-control></pagination-control>
 </div>
